--- a/scala/.scalafmt.conf
+++ b/scala/.scalafmt.conf
@@ -2,6 +2,8 @@ version = 3.0.2
 
 maxColumn = 120
 
+newlines.alwaysBeforeElseAfterCurlyIf = true
+
 assumeStandardLibraryStripMargin = true
 align.stripMargin = true
 
